--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^1.3.0",
+    "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
