--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src/"
+    "lint": "eslint --ext .js,.vue src/",
+    "lint-fix": "eslint --fix --ext .js,.vue src/"
   },
   "dependencies": {
     "axios": "^0.18.0",
